<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".splash">

    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="405dp"
        android:layout_height="290dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/zenthread"
        android:contentDescription="@string/image_showing_icon_of_application"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/logonameimg"
        android:layout_width="382dp"
        android:layout_height="77dp"
        android:fontFamily="@font/apptext"
        android:gravity="center"
        android:text="@string/zenthread"
        android:textColor="@color/black"
        android:textSize="@dimen/_40sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513"
        android:contentDescription="@string/text_telling_name_of_application"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/owner1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_25sdp"
        android:fontFamily="@font/spartan_thin"
        android:gravity="center"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.906"
        android:contentDescription="@string/text_specify_from"
        android:visibility="visible" />


    <TextView
        android:id="@+id/owner2"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_25sdp"
        android:contentDescription="@string/text_telling_developer_name"
        android:fontFamily="@font/spartan_thin"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/aayush_pawar"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        tools:ignore="TextSizeCheck" />



</androidx.constraintlayout.widget.ConstraintLayout>