<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/one"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="123dp"
        android:autofillHints="emailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149"
        app:srcCompat="@drawable/zenthread"
        android:contentDescription="logo "
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="244dp"
        android:layout_height="149dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_62sdp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="287dp"
        android:layout_height="36dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="97dp"
        android:layout_height="33dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="129dp"
        android:layout_height="46dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextLogEmailAddress"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:textColor="@color/black"

        android:textColorHint="#78909C"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621"
        tools:ignore="TextFields,TextSizeCheck" />

    <EditText
        android:id="@+id/editTextLogPassword"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/Logbutton"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/black"
        android:text="Login"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TextSizeCheck,UnusedAttribute,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="@dimen/_124sdp"
        android:layout_height="@dimen/_24sdp"
        android:gravity="center"
        android:text="Need an account?"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/logsignup"
        android:layout_width="@dimen/_124sdp"
        android:layout_height="@dimen/_24sdp"
        android:gravity="center"
        android:text="SIGN UP!"
        android:textStyle="bold"

        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>