<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/two"
    tools:context=".registration">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilerg0"
        android:layout_width="151dp"
        android:layout_height="130dp"
        android:src="@drawable/photocamera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="Create New"
        android:textColor="@color/white"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/_215sdp"
        android:layout_height="@dimen/_35sdp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="Account"
        android:textColor="@color/white"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="USERNAME"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        tools:ignore="HardcodedText,TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="@dimen/_91sdp"
        android:layout_height="@dimen/_52sdp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center_vertical"
        android:text="RE-ENTER PASSWORD"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <EditText
        android:id="@+id/rgemail"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:textColor="@color/black"

        android:textColorHint="#78909C"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572"
        tools:ignore="TextFields,TextSizeCheck" />

    <EditText
        android:id="@+id/rgpassword"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        tools:ignore="TextSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/rgrepassword"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="324dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/black"
        android:text="SIGN Up"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,TextSizeCheck,UnusedAttribute" />


    <TextView
        android:id="@+id/Loginbut"
        android:layout_width="@dimen/_124sdp"
        android:layout_height="@dimen/_24sdp"
        android:gravity="center"
        android:text="Login!"
        android:textColor="@color/black"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/rgusername"
        android:layout_width="260dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="text"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        tools:ignore="Autofill,HardcodedText,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>